# nebskill

./: .gitignore  README.md  SKILL.md  pyproject.toml  run_pipeline.sh
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
agent/: llm_agent.py
assets/: neb_defaults.yaml
lib/: neb_diagnostics.py
nebskill/: SKILL.md
nebskill/.codex-plugin/: plugin.json
nebskill/agents/: anomaly-investigator.md
nebskill/references/: mace_off_usage.md  neb_method.md  transition1x_schema.md
nebskill/skills/analyzing-results/: SKILL.md
nebskill/skills/configuring-machine/: SKILL.md
nebskill/skills/demo/: SKILL.md
nebskill/skills/finding-lower-barriers/: SKILL.md
nebskill/skills/loading-reaction/: SKILL.md
nebskill/skills/monitoring-convergence/: SKILL.md
nebskill/skills/nebskill-analyzing-results/: SKILL.md
nebskill/skills/nebskill-configuring-machine/: SKILL.md
nebskill/skills/nebskill-demo/: SKILL.md
nebskill/skills/nebskill-finding-lower-barriers/: SKILL.md
nebskill/skills/nebskill-loading-reaction/: SKILL.md
nebskill/skills/nebskill-monitoring-convergence/: SKILL.md
nebskill/skills/nebskill-relaxing-endpoints/: SKILL.md
nebskill/skills/nebskill-reproduce/: SKILL.md
nebskill/skills/nebskill-running-neb/: SKILL.md
nebskill/skills/nebskill-running-on-the-cluster/: SKILL.md
nebskill/skills/nebskill-verifying-transition-state/: SKILL.md
nebskill/skills/relaxing-endpoints/: SKILL.md
nebskill/skills/reproduce/: SKILL.md
nebskill/skills/reproducing-dataset/: SKILL.md
nebskill/skills/running-neb/: SKILL.md
nebskill/skills/running-on-the-cluster/: SKILL.md
nebskill/skills/verifying-transition-state/: SKILL.md
notes/: grambow_paper.md  transition1x_paper.md
profiles/: collab.yaml  riken.yaml
skills/analyze/: SKILL.md
skills/configuring-machine/: SKILL.md
skills/load/: SKILL.md
skills/monitor/: SKILL.md
skills/monitoring-convergence/: SKILL.md
skills/neb/: SKILL.md
skills/relax/: SKILL.md
skills/relaxing-endpoints/: SKILL.md
skills/running-neb/: SKILL.md
skills/setup/: SKILL.md
src/nebskill/: analyze.py  build_cache.py  cache.py  calculator.py  config.py  diagnostics.py  dispatch.py  download.py  frequencies.py  goat.py  grade.py  irc.py  load.py  monitor.py  neb.py  neb_defaults.yaml  neb_diagnostics.py  optts.py  orca.py  paths.py  plan.py  plot.py  prepare.py  reactions_cache.json  relax.py  remote.py  sample.py  summary.py  writer.py
step0-batch/: INSTRUCTIONS.md  job_template.sh
step1-load/: INSTRUCTIONS.md  load_dataset.py
step2-relax/: INSTRUCTIONS.md
step3-neb/: INSTRUCTIONS.md
step4-monitor/: INSTRUCTIONS.md  diagnostics.py  retry.py
step5-analyze/: INSTRUCTIONS.md
