[project]
name = "nebskill"
version = "0.29.0"
description = "Nudged Elastic Band calculations for reaction barriers using MACE-OFF / ORCA and Transition1x"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.23",
    "h5py>=3.10",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

# MACE backend pulls in PyTorch (~2 GB). The ORCA backend needs none of it, so it
# is an optional extra — install `nebskill[mace]` for the MACE backend, plain
# `nebskill` for an ORCA-only machine. torch/mace are imported lazily, so the
# package works without this extra as long as the mace backend isn't selected.
[project.optional-dependencies]
mace = ["mace-torch>=0.3"]

[project.scripts]
nebskill-download = "nebskill.download:main"
nebskill-load     = "nebskill.load:main"
nebskill-sample   = "nebskill.sample:main"
nebskill-relax    = "nebskill.relax:main"
nebskill-neb      = "nebskill.neb:main"
nebskill-plan     = "nebskill.plan:main"
nebskill-diagnose = "nebskill.diagnostics:main"
nebskill-analyze  = "nebskill.analyze:main"
nebskill-plot     = "nebskill.plot:main"
nebskill-writer   = "nebskill.writer:main"
nebskill-frequencies = "nebskill.frequencies:main"
nebskill-optts    = "nebskill.optts:main"
nebskill-irc      = "nebskill.irc:main"
nebskill-goat     = "nebskill.goat:main"
nebskill-monitor  = "nebskill.monitor:main"
nebskill-summary  = "nebskill.summary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nebskill"]
