[project]
name = "nebskill"
version = "0.31.0"
description = "Nudged Elastic Band reaction-barrier calculations with native ORCA on the Transition1x dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.23",
    "h5py>=3.10",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.scripts]
nebskill-download = "nebskill.download:main"
nebskill-load     = "nebskill.load:main"
nebskill-sample   = "nebskill.sample:main"
nebskill-grade    = "nebskill.grade:main"
nebskill-relax    = "nebskill.relax:main"
nebskill-neb      = "nebskill.neb:main"
nebskill-plan     = "nebskill.plan:main"
nebskill-analyze  = "nebskill.analyze:main"
nebskill-plot     = "nebskill.plot:main"
nebskill-writer   = "nebskill.writer:main"
nebskill-frequencies = "nebskill.frequencies:main"
nebskill-optts    = "nebskill.optts:main"
nebskill-irc      = "nebskill.irc:main"
nebskill-goat     = "nebskill.goat:main"
nebskill-summary  = "nebskill.summary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nebskill"]
